Begin gemaakt met de duck hunt opdracht.

--- a/Duckhunt/index.html
+++ b/Duckhunt/index.html
@@ -7,7 +7,11 @@
     <title>Duck hunt</title>
 </head>
 <body>
-    <img src="stage.png" alt="stage">
+    <div class="container"> 
+        <img src="stage.png" alt="stage">
+        <img id="duckGif" src="duck.gif" alt="duck">
+    </div>
+   
 
     <script src="duckhunt.js"></script><!--Zodat de DOM manupilatie goed gaat.-->
 </body>
