Bezig om de duck hunt te ontwerpen.

--- a/Duckhunt/index.html
+++ b/Duckhunt/index.html
@@ -7,12 +7,15 @@
     <title>Duck hunt</title>
 </head>
 <body>
-    <div class="container"> 
-        <img src="stage.png" alt="stage">
-        <img id="duckGif" src="duck.gif" alt="duck">
+    <div class="DuckHunt">
+            <img id="stage" src="stage.png" alt="stage">
+                <div class="duck">
+                    <img src="duck.gif" alt="duck">
+                </div>
     </div>
+    
    
 
-    <script src="duckhunt.js"></script><!--Zodat de DOM manupilatie goed gaat.-->
+    <script src="duckhunt.js"></script><!--Zodat de DOM manupilatie goed loopt.-->
 </body>
 </html>
