Bezig met het pagina op te bouwen.

--- a/Duckhunt/index.html
+++ b/Duckhunt/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="DuckHunt">
             <img id="stage" src="stage.png" alt="stage">
-                <div class="duck">
-                    <img src="duck.gif" alt="duck">
+                <div id="duck">
+                    <img id="duckGif" src="duck.gif" alt="duck">
                 </div>
     </div>
     
