De 2 afbeeldingen toegevoegd.

--- a/Duckhunt/index.html
+++ b/Duckhunt/index.html
@@ -7,15 +7,12 @@
     <title>Duck hunt</title>
 </head>
 <body>
-    <div class="DuckHunt">
-            <img id="stage" src="stage.png" alt="stage">
-                <div id="duck">
-                    <img id="duckGif" src="duck.gif" alt="duck">
-                </div>
-    </div>
-    
-   
+    <div class="container"><!--Waar alle content plaats vind.-->
 
-    <script src="duckhunt.js"></script><!--Zodat de DOM manupilatie goed loopt.-->
+        <img id="stageBG" src="stage.png" alt="stageButton">
+        <img id="duckGif" src="duck.gif" alt="duck">
+
+    </div>
+    <script src="duckhunt.js"></script>
 </body>
 </html>
