--- a/Duckhunt/index.html
+++ b/Duckhunt/index.html
@@ -10,9 +10,9 @@
     <div class="container"><!--Waar alle content plaats vind.-->
 
         <img id="stageBG" src="stage.png" alt="stageButton">
-        <img id="duckGif" src="duck.gif" alt="duck">
+        <img id="duckGif" src="duck.gif" alt="duck"><!--Image van de duck Gif.-->
 
     </div>
-    <script src="duckhunt.js"></script>
+    <script src="duckhunt.js"></script><!--Zorgt dat de DOM manupilatie goed verloopt.-->
 </body>
 </html>
